	* Update manpages appropriately for report-bugs common manpage and
	gpl info.
	
	* Add copyrights to all manpages appropriately.

	* Remove "ORIGIN" and "AUTHORS" from most manpages.

	* common/doc/manpage-common-config-tool-general-use.man,
	common/doc/manpage-common-config-tool-options.man: New files.

	* bmc-config/, pef-config/, ipmi-sensors-config/: Use new common
	config-tool manpage text.
	
2008-04-07  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/: Support WATTS sensor unit type.

	* bmc-config/bmc-config.8.pre.in: Fix options in example.

	* bmc-config/bmc-config.conf.5.in: Anonymous -> NULL.

	* ipmimonitoring/: Support entity presence, management subsystem,
	battery, and fru state sensor interpretations.  General code
	cleanup.

	* ipmi-sensors/ipmi-sensors.8.pre.in: Add ipmimonitoring note.

	* ipmi-sel/ipmi-sel.8.pre.in: Add some text on SEL records.

	* README: Update as generic info, not just a GPL notice.

	* doc/freeipmi.7.in: New generic overview manpage.

	* libfreeipmi/libfreeipmi.3.in: New generic library overview
	manpage.

	* doc/Makefile.am, freeipmi.spec.in, configure.ac: Update for new
	manpages.

	* common/doc: Fix make dist bug.

	* Add freeipmi(7) to "SEE ALSO" on all appropriate manpages.

	* Various manpage and doc fixes.

	* Fix compiler warnings.

2008-04-05  Albert Chu <chu11@llnl.gov>

	* ipmipower/: Finish -B support.

	* ipmipower/: Add -F support.

	* doc/freeipmi-hostranged.txt: Update appropriately.

	* ipmi-sensors-config/: Put undefined threshold support in verbose
	output only.

	* ipmi-sensors-config/: Fix readable sensors corner case.
	
2008-04-04  Albert Chu <chu11@llnl.gov>

	* ipmipower/: Support -B option for consistency to other tools,
	although -B does nothing.  Change original -B option to -G.

	* common/doc/manpage-common-hostranged-text-options.man: Move
	option text into manpage-common-hostranged-text-main.man.

	* common/doc/manpage-common-hostranged-text-options.man: Rename to