@@ -1,0 +1,36 @@
+.SH "OPTIONS"
+The following options are available
+.TP
+.I "-h"
+Output help menu.
+.TP
+.I "-V"
+Output version.
+.TP
+.I "-c count"
+Stop after sending
+.I count
+packets.
+.TP
+.I "-i interval"
+Wait
+.I interval
+seconds between sending each packet.  The default is to wait for one
+second between each packet.
+.TP
+.I "-I interface address"
+Set source address to specified interface address. Argument may
+be numeric IP address or name of device.
+.TP
+.I "-t timeout"
+Time to wait for a response, in seconds. Default is five seconds.
+.TP
+.I "-v"
+Verbose output.
+.TP
+.I "-s num"
+Specify an initial starting sequence number.  The default is to use a
+random initial sequence number.
+.TP
+.I "-d"
+Turn on debugging.
