@@ -1,0 +1,3 @@
+.SH "ORIGIN"
+Command and manpage based off
+.B ping(8).
