@@ -1,5 +1,5 @@
 .\"#############################################################################
-.\"$Id: ipmiping.8.pre.in,v 1.3 2008-04-08 18:26:47 chu11 Exp $
+.\"$Id: ipmiping.8.pre.in,v 1.4 2008-04-09 00:34:10 chu11 Exp $
 .\"#############################################################################
 .\"  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
 .\"  Copyright (C) 2003-2007 The Regents of the University of California.
@@ -38,66 +38,18 @@ IPMI.  The initial starting sequence number will be randomized.
 .B ipmiping 
 will return 0 to the environment if it receives atleast 1 response 
 from the remote host.  Otherwise, it exists with a value of 1.
-.SH "OPTIONS"
-The following options are available 
-.TP
-.I "-h"
-Output help menu.
-.TP
-.I "-V"
-Output version.
-.TP
-.I "-c count"
-Stop after sending 
-.I count
-request packets.
-.TP
-.I "-i interval"
-Wait 
-.I interval 
-seconds between sending each packet.  The default is to wait for one
-second between each packet.
-.TP
-.I "-I interface address"
-Set source address to specified interface address. Argument may
-be numeric IP address or name of device.
-.TP
-.I "-t timeout"
-Time to wait for a response, in seconds. Default is five seconds.
-.TP
-.I "-v"
-Verbose output.
+#include <@top_srcdir@/common/doc/manpage-common-ping-options.man>
 .TP
 .I "-r version"
 Specify IPMI protocol version.  Available options are "1.5" and "2.0".
 Default is to use "1.5".
-.TP
-.I "-s num"
-Specify an initial starting sequence number.  The default is to use a
-random initial sequence number.
-.TP
-.I "-d"
-Turn on debugging.
-.SH "LOCAL PING"
-Unlike 
-.B ping(8),
-.B ipmiping
-cannot be used to ping a local network device (i.e. 127.0.0.1).
-.SH "KNOWN ISSUES"
-It has been observed that some remote BMCs can get "confused" and
-delay packet responses if duplicate packets are sent in succession
-very quickly.  For example, this could happen if the user repeatedly
-executes "ipmiping -c 1 -s X destination" very quickly.  There is no
-known way to cleanly deal with a "confused" BMC other than the wait
-awhile.
+#include <@top_srcdir@/common/doc/manpage-common-known-issues-ping.man>
 #include <@top_srcdir@/common/doc/manpage-common-reporting-bugs.man>
 .SH COPYRIGHT
 Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
 .br
 Copyright (C) 2003-2007 The Regents of the University of California.
 #include <@top_srcdir@/common/doc/manpage-common-gpl-program-text.man>
-.SH "ORIGIN"
-Command and manpage based off 
-.B ping(8).
+#include <@top_srcdir@/common/doc/manpage-common-ping-origin.man>
 .SH "SEE ALSO"
 freeipmi(7), ping(8), rmcpping(8)
